--- a/Bank Marketing.ipynb
+++ b/Bank Marketing.ipynb
@@ -29,13 +29,458 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>job</th>\n",
+       "      <th>marital</th>\n",
+       "      <th>education</th>\n",
+       "      <th>default</th>\n",
+       "      <th>housing</th>\n",
+       "      <th>loan</th>\n",
+       "      <th>contact</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>...</th>\n",
+       "      <th>campaign</th>\n",
+       "      <th>pdays</th>\n",
+       "      <th>previous</th>\n",
+       "      <th>poutcome</th>\n",
+       "      <th>emp.var.rate</th>\n",
+       "      <th>cons.price.idx</th>\n",
+       "      <th>cons.conf.idx</th>\n",
+       "      <th>euribor3m</th>\n",
+       "      <th>nr.employed</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>56</td>\n",
+       "      <td>housemaid</td>\n",
+       "      <td>married</td>\n",
+       "      <td>basic.4y</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>57</td>\n",
+       "      <td>services</td>\n",
+       "      <td>married</td>\n",
+       "      <td>high.school</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37</td>\n",
+       "      <td>services</td>\n",
+       "      <td>married</td>\n",
+       "      <td>high.school</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40</td>\n",
+       "      <td>admin.</td>\n",
+       "      <td>married</td>\n",
+       "      <td>basic.6y</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>56</td>\n",
+       "      <td>services</td>\n",
+       "      <td>married</td>\n",
+       "      <td>high.school</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41183</th>\n",
+       "      <td>73</td>\n",
+       "      <td>retired</td>\n",
+       "      <td>married</td>\n",
+       "      <td>professional.course</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>cellular</td>\n",
+       "      <td>nov</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>-1.1</td>\n",
+       "      <td>94.767</td>\n",
+       "      <td>-50.8</td>\n",
+       "      <td>1.028</td>\n",
+       "      <td>4963.6</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41184</th>\n",
+       "      <td>46</td>\n",
+       "      <td>blue-collar</td>\n",
+       "      <td>married</td>\n",
+       "      <td>professional.course</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>cellular</td>\n",
+       "      <td>nov</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>-1.1</td>\n",
+       "      <td>94.767</td>\n",
+       "      <td>-50.8</td>\n",
+       "      <td>1.028</td>\n",
+       "      <td>4963.6</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41185</th>\n",
+       "      <td>56</td>\n",
+       "      <td>retired</td>\n",
+       "      <td>married</td>\n",
+       "      <td>university.degree</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>cellular</td>\n",
+       "      <td>nov</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>-1.1</td>\n",
+       "      <td>94.767</td>\n",
+       "      <td>-50.8</td>\n",
+       "      <td>1.028</td>\n",
+       "      <td>4963.6</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41186</th>\n",
+       "      <td>44</td>\n",
+       "      <td>technician</td>\n",
+       "      <td>married</td>\n",
+       "      <td>professional.course</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>cellular</td>\n",
+       "      <td>nov</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>-1.1</td>\n",
+       "      <td>94.767</td>\n",
+       "      <td>-50.8</td>\n",
+       "      <td>1.028</td>\n",
+       "      <td>4963.6</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41187</th>\n",
+       "      <td>74</td>\n",
+       "      <td>retired</td>\n",
+       "      <td>married</td>\n",
+       "      <td>professional.course</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>cellular</td>\n",
+       "      <td>nov</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>999</td>\n",
+       "      <td>1</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>-1.1</td>\n",
+       "      <td>94.767</td>\n",
+       "      <td>-50.8</td>\n",
+       "      <td>1.028</td>\n",
+       "      <td>4963.6</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>41188 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       age          job  marital            education  default housing loan  \\\n",
+       "0       56    housemaid  married             basic.4y       no      no   no   \n",
+       "1       57     services  married          high.school  unknown      no   no   \n",
+       "2       37     services  married          high.school       no     yes   no   \n",
+       "3       40       admin.  married             basic.6y       no      no   no   \n",
+       "4       56     services  married          high.school       no      no  yes   \n",
+       "...    ...          ...      ...                  ...      ...     ...  ...   \n",
+       "41183   73      retired  married  professional.course       no     yes   no   \n",
+       "41184   46  blue-collar  married  professional.course       no      no   no   \n",
+       "41185   56      retired  married    university.degree       no     yes   no   \n",
+       "41186   44   technician  married  professional.course       no      no   no   \n",
+       "41187   74      retired  married  professional.course       no     yes   no   \n",
+       "\n",
+       "         contact month day_of_week  ...  campaign  pdays  previous  \\\n",
+       "0      telephone   may         mon  ...         1    999         0   \n",
+       "1      telephone   may         mon  ...         1    999         0   \n",
+       "2      telephone   may         mon  ...         1    999         0   \n",
+       "3      telephone   may         mon  ...         1    999         0   \n",
+       "4      telephone   may         mon  ...         1    999         0   \n",
+       "...          ...   ...         ...  ...       ...    ...       ...   \n",
+       "41183   cellular   nov         fri  ...         1    999         0   \n",
+       "41184   cellular   nov         fri  ...         1    999         0   \n",
+       "41185   cellular   nov         fri  ...         2    999         0   \n",
+       "41186   cellular   nov         fri  ...         1    999         0   \n",
+       "41187   cellular   nov         fri  ...         3    999         1   \n",
+       "\n",
+       "          poutcome emp.var.rate  cons.price.idx  cons.conf.idx  euribor3m  \\\n",
+       "0      nonexistent          1.1          93.994          -36.4      4.857   \n",
+       "1      nonexistent          1.1          93.994          -36.4      4.857   \n",
+       "2      nonexistent          1.1          93.994          -36.4      4.857   \n",
+       "3      nonexistent          1.1          93.994          -36.4      4.857   \n",
+       "4      nonexistent          1.1          93.994          -36.4      4.857   \n",
+       "...            ...          ...             ...            ...        ...   \n",
+       "41183  nonexistent         -1.1          94.767          -50.8      1.028   \n",
+       "41184  nonexistent         -1.1          94.767          -50.8      1.028   \n",
+       "41185  nonexistent         -1.1          94.767          -50.8      1.028   \n",
+       "41186  nonexistent         -1.1          94.767          -50.8      1.028   \n",
+       "41187      failure         -1.1          94.767          -50.8      1.028   \n",
+       "\n",
+       "       nr.employed    y  \n",
+       "0           5191.0   no  \n",
+       "1           5191.0   no  \n",
+       "2           5191.0   no  \n",
+       "3           5191.0   no  \n",
+       "4           5191.0   no  \n",
+       "...            ...  ...  \n",
+       "41183       4963.6  yes  \n",
+       "41184       4963.6   no  \n",
+       "41185       4963.6   no  \n",
+       "41186       4963.6  yes  \n",
+       "41187       4963.6   no  \n",
+       "\n",
+       "[41188 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('bank-additional-full.csv', sep = ';')\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 41.188 observations and 21 variables in data including the target variable y."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Variables description\n",
+    "\n",
+    "### Bank client data:\n",
+    "1. age\n",
+    "\n",
+    "2. job : type of job\n",
+    "\n",
+    "3. marital : marital status\n",
+    "\n",
+    "4. education\n",
+    "\n",
+    "5. default: has credit in default?\n",
+    "\n",
+    "6. housing: has housing loan? \n",
+    "\n",
+    "7. loan: has personal loan? \n",
+    "\n",
+    "### Related with the last contact of the current campaign:\n",
+    "8. contact: contact communication type\n",
+    "\n",
+    "9. month: last contact month of year\n",
+    "\n",
+    "10. day_of_week: last contact day of the week\n",
+    "\n",
+    "11. duration: last contact duration, in seconds (numeric). Important note: this attribute highly affects the output target (e.g., if duration=0 then y='no'). Yet, the duration is not known before a call is performed. Also, after the end of the call y is obviously known. Thus, this input should only be included for benchmark purposes and should be discarded if the intention is to have a realistic predictive model.\n",
+    "\n",
+    "### Other attributes:\n",
+    "12. campaign: number of contacts performed during this campaign and for this client\n",
+    "\n",
+    "13. pdays: number of days that passed by after the client was last contacted from a previous campaign (999 means client was not previously contacted)\n",
+    "\n",
+    "14. previous: number of contacts performed before this campaign and for this client\n",
+    "\n",
+    "15. poutcome: outcome of the previous marketing campaign\n",
+    "\n",
+    "### Social and economic context attributes\n",
+    "16. emp.var.rate: employment variation rate - quarterly indicator\n",
+    "\n",
+    "17. cons.price.idx: consumer price index - monthly indicator \n",
+    "\n",
+    "18. cons.conf.idx: consumer confidence index - monthly indicator \n",
+    "\n",
+    "19. euribor3m: euribor 3 month rate - daily indicator \n",
+    "   - it is calculated by eliminating the highest 15% and the lowest 15% of the interest rates submitted and calculating the\n",
+    "     arithmetic mean of the remaining values\n",
+    "\n",
+    "20. nr.employed: number of employees - quarterly indicator \n",
+    "\n",
+    "Target variable:\n",
+    "21. y - has the client subscribed a term deposit? "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = pd.read_csv('Data/bank-additional-full.csv', sep = ';')\n",
-    "data"
-   ]
+   "source": []
   }
  ],
  "metadata": {
