Exploration Default credit variable
unique values

--- a/Bank Marketing.ipynb
+++ b/Bank Marketing.ipynb
@@ -1648,6 +1648,7 @@
     }
    ],
    "source": [
+    "# Unique categories for default_credit variable\n",
     "data.default_credit.value_counts()"
    ]
   },
@@ -1668,6 +1669,7 @@
     }
    ],
    "source": [
+    "\n",
     "labels = {'title':'Credit in default','xlabel':'','ylabel':'Count'}\n",
     "create_countplot(data.default_credit, order = data.default_credit, color = base_color, **labels);"
    ]
