Exploring previous campaign output

--- a/Bank Marketing.ipynb
+++ b/Bank Marketing.ipynb
@@ -1812,7 +1812,9 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1835,6 +1837,44 @@
    "metadata": {},
    "source": [
     "There are two ways how the bank employees have contacted their clients: cellphone (cellular) or telephone."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nonexistent    35551\n",
+       "failure         4252\n",
+       "success         1373\n",
+       "Name: previous_campaign_outcome, dtype: int64"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Unique values of previous_campaign_outcome variable\n",
+    "data.previous_campaign_outcome.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Major part of observation do not provide the information about previous campaign output."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploring numeric variables"
    ]
   },
   {
