Percentage of term deposit subscrptions by age ranges
Adding description to the bar chart

--- a/Bank Marketing.ipynb
+++ b/Bank Marketing.ipynb
@@ -3177,7 +3177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The graph above displays bank clients separated into the age ranges along with the target variable. However we can not make precise comparison of groups because the last age range is barely visible. Therefore we would like to visualize rather the proportions of these groups using percent stacked barplot where the data are normalized."
+    "The graph above displays bank clients separated into the age ranges along with the target variable. However the last group is barely visible, so we are not able to make precise comparison. Therefore we would like to visualize rather the proportions of these age ranges using percent stacked barplot where the data are normalized."
    ]
   },
   {
@@ -3293,13 +3293,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Computing the percentage\n",
+    "# Computing the proportions\n",
     "data_2 = data_2.div(data_2.sum(axis = 1),axis = 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 524,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>target</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age_range</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17-24</th>\n",
+       "      <td>0.790390</td>\n",
+       "      <td>0.209610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-34</th>\n",
+       "      <td>0.882781</td>\n",
+       "      <td>0.117219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-44</th>\n",
+       "      <td>0.914947</td>\n",
+       "      <td>0.085053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45-54</th>\n",
+       "      <td>0.913059</td>\n",
+       "      <td>0.086941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55-64</th>\n",
+       "      <td>0.847789</td>\n",
+       "      <td>0.152211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65+</th>\n",
+       "      <td>0.568365</td>\n",
+       "      <td>0.431635</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "target            0         1\n",
+       "age_range                    \n",
+       "17-24      0.790390  0.209610\n",
+       "25-34      0.882781  0.117219\n",
+       "35-44      0.914947  0.085053\n",
+       "45-54      0.913059  0.086941\n",
+       "55-64      0.847789  0.152211\n",
+       "65+        0.568365  0.431635"
+      ]
+     },
+     "execution_count": 524,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 523,
    "metadata": {},
    "outputs": [
     {
@@ -3316,12 +3406,19 @@
    "source": [
     "# Percentage stacked barplot\n",
     "ax = data_2.plot.bar(stacked = True)\n",
-    "vals = ax.get_yticks()\n",
-    "ax.set_yticklabels(['{:,.0%}'.format(x) for x in vals])\n",
+    "y_values = ax.get_yticks()\n",
+    "ax.set_yticklabels(['{:,.0%}'.format(x) for x in y_values])\n",
     "plt.xticks(rotation = 45)\n",
     "plt.legend(loc = 'upper left', ncol = 2, framealpha = 0.1)\n",
     "plt.title('The term deposit subscription by age ranges')\n",
     "plt.xlabel('Age range');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the percentage stacked bar chart we can compare our age ranges, observe the differences and see the trend. The middle age ranges (35-44 and 45-54) are very similar with approximately 8% of clients who have subscribed the term deposit. Approximately 21% of the youngest clients belonging to 17-24 age range have subscribed the term deposit. This bar chart also nicely displays the last age range. We can see that more than 40% of contacted clients now own the term deposit."
    ]
   },
   {
