--- a/Bank Marketing.ipynb
+++ b/Bank Marketing.ipynb
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
        "[12 rows x 21 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1299,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,37 +1311,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "age                            int64\n",
-       "job                           object\n",
-       "marital_status                object\n",
-       "education                     object\n",
-       "default_credit                object\n",
-       "house_loan                    object\n",
-       "loan                          object\n",
-       "contact_type                  object\n",
-       "month                         object\n",
-       "day_of_week                   object\n",
-       "contact_duration               int64\n",
-       "number_of_contacts             int64\n",
-       "days_passed                    int64\n",
-       "number_previous_contact        int64\n",
-       "previous_campaign_outcome     object\n",
-       "emp_variation_rate           float64\n",
-       "cpi                          float64\n",
-       "cci                          float64\n",
-       "euribor_rate                 float64\n",
-       "no_employees                 float64\n",
-       "target                        object\n",
+       "age                             int64\n",
+       "job                          category\n",
+       "marital_status                 object\n",
+       "education                      object\n",
+       "default_credit                 object\n",
+       "house_loan                     object\n",
+       "loan                           object\n",
+       "contact_type                   object\n",
+       "month                          object\n",
+       "day_of_week                    object\n",
+       "contact_duration                int64\n",
+       "number_of_contacts              int64\n",
+       "days_passed                     int64\n",
+       "number_previous_contact         int64\n",
+       "previous_campaign_outcome      object\n",
+       "emp_variation_rate            float64\n",
+       "cpi                           float64\n",
+       "cci                           float64\n",
+       "euribor_rate                  float64\n",
+       "no_employees                  float64\n",
+       "target                         object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,19 +1353,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting datatype of categorical variables to 'category' datatype\n",
+    "to_category = ['job','marital_status','education','default_credit','house_loan', 'loan','contact_type', \n",
+    "               'month','day_of_week', 'previous_campaign_outcome']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Converting data type\n",
-    "data.job = data.job.astype('category')\n",
-    "data.marital_status = data.marital_status.astype('category')\n",
-    "data.education = data.education.astype('category')\n",
-    "data.default_credit = data.default_credit.astype('category')\n",
-    "data.house_loan = data.house_loan.astype('category')\n",
-    "data.loan = data.loan.astype('category')\n",
-    "data.contact_type = data.contact_type.astype('category')\n",
-    "data.previous_campaign_outcome = data.previous_campaign_outcome.astype('category')"
+    "for col in to_category:\n",
+    "  data[col] = data[col].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age                             int64\n",
+       "job                          category\n",
+       "marital_status               category\n",
+       "education                    category\n",
+       "default_credit               category\n",
+       "house_loan                   category\n",
+       "loan                         category\n",
+       "contact_type                 category\n",
+       "month                        category\n",
+       "day_of_week                  category\n",
+       "contact_duration                int64\n",
+       "number_of_contacts              int64\n",
+       "days_passed                     int64\n",
+       "number_previous_contact         int64\n",
+       "previous_campaign_outcome    category\n",
+       "emp_variation_rate            float64\n",
+       "cpi                           float64\n",
+       "cci                           float64\n",
+       "euribor_rate                  float64\n",
+       "no_employees                  float64\n",
+       "target                         object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.dtypes"
    ]
   },
   {
