--- a/Bank Marketing.ipynb
+++ b/Bank Marketing.ipynb
@@ -8169,6 +8169,106 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Balancing the data\n",
+    "### over-sampling minority class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 529,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separating target variable according to classes\n",
+    "data_majority_class = data[data['target'] == 0]\n",
+    "data_minority_class = data[data['target'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 533,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    36537\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 533,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Majority class\n",
+    "data_majority_class.target.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 536,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Upsampling the minority class using the number of observations in majority class with replacing\n",
+    "from sklearn.utils import resample\n",
+    "data_ups_minority = resample(data_minority_class, n_samples = 36537, replace = True, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 539,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating new upsamled dataset\n",
+    "data_up = pd.concat([data_majority_class, data_ups_minority])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 540,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    36537\n",
+       "0    36537\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 540,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The dataset has now the same amount of observations in both classes\n",
+    "data_up.target.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 544,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting upsampled dataset into training and testing data\n",
+    "X = data_up.drop(['days_passed', 'target'], axis = 1)\n",
+    "y = data_up['target']\n",
+    "\n",
+    "X_train, y_train, X_test, y_test = train_test_split(X, y, test_size = 0.3, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
